--- a/src/app/components/asta-one/asta-one.component.html
+++ b/src/app/components/asta-one/asta-one.component.html
@@ -2,6 +2,7 @@
   <ng-content></ng-content>
 </div>
 
+<div>{{finalResult}}</div>
 
 <ul class="list">
   <li class="list__item" *ngFor="let item of initialList">{{item}}</li>
